# KBC-Flyer-Reader

./: .gitignore  Create Shortcut.bat  INSTALLER.md  KBC Flyer Reader (backup).bat  KBC Flyer Reader.lnk  README.md  build_exe.bat  clean_templates.py  flyer_reader.spec  install.bat  install.sh  installer.iss  pyproject.toml  requirements.txt  run.sh
Flyer Reader Output/: README.txt
assets/: make_icon.py
docs/: ARCHITECTURE.md
src/: __init__.py  config.py  credential_store.py  detector.py  excel_writer.py  extractor.py  field_hints.py  gui.py  llm_client.py  main.py  normalizers.py  pipeline.py  prompts.py  review_dialog.py  schemas.py  theme.py  timing_stats.py  update_checker.py  version.py
templates/: KBC_Template__Building_Survey_Locked.xlsx  KBC_Template__Land_Survey_Locked.xlsx
