[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbc-flyer-reader"
version = "0.1.0"
description = "Extract industrial real estate flyer data into KBC survey templates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "openpyxl>=3.1",
    "python-dateutil>=2.8",
    "phonenumbers>=8.13",
    "pdfplumber>=0.11",
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "openai>=1.40",
    "instructor>=1.4",
    "tkinterdnd2>=0.4",
]

[project.scripts]
flyer-reader = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
